--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=400">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happiest Birthday KYRA</title>
     <style>
         * {
@@ -11,8 +11,8 @@
             margin: 0;
         }
         body{
-            height:100%;
-            width:100%;
+            height:auto;
+            width:auto;
         }
         .container{
             position: relative;
