--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
             <div class="letters">A</div>
             <div class="letters">P</div>
             <div class="letters">P</div>
-            <div class="letters">Y</div>
+            <div class="letters">I</div>
+            <div class="letters">E</div>
+            <div class="letters">S</div>
+            <div class="letters">T</div>
         </div>
         <div class="innerContainer">
             <div class="photoSection">
